# pybind11-package-template

./: .clang-format  .coveragerc  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml
docs/: requirements.txt
docs/source/: api.rst  conf.py  example_usage.ipynb  index.rst
example/: CMakeLists.txt  example.py
example/include/: clazz.hpp
example/src/: binding.cpp  clazz.cpp  main.cpp
tests/: test.cpp  test_clazz.py
